# jarvis_ai

./: .gitignore  LICENSE  README.md  pyproject.toml
jarvis/: main.py
jarvis/core/: llm_component.py  recorder_component.py  stt_component.py  tts_component.py
jarvis/examples/: ollama_example.py  register_example.py  tts_example.py  whisper_example.py
jarvis/ui/: audio_widget.py  recording_button.py  recording_timer.py  ui.py  ui2.py
